Here be Dragons

--- a/Acts-as-Django.html
+++ b/Acts-as-Django.html
@@ -20,8 +20,8 @@
     <script type="text/javascript" src="_static/jquery.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
     <link rel="top" title="demo v0.0 documentation" href="index.html" />
-    <link rel="next" title="django-djikiki" href="django-djikiki.html" />
-    <link rel="prev" title="django-project" href="django-project.html" /> 
+    <link rel="next" title="OpenEcho" href="OpenEcho.html" />
+    <link rel="prev" title="appenginebook" href="appenginebook.html" /> 
   </head>
   <body>
     <div class="related">
@@ -31,10 +31,10 @@
           <a href="genindex.html" title="General Index"
              accesskey="I">index</a></li>
         <li class="right" >
-          <a href="django-djikiki.html" title="django-djikiki"
+          <a href="OpenEcho.html" title="OpenEcho"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="django-project.html" title="django-project"
+          <a href="appenginebook.html" title="appenginebook"
              accesskey="P">previous</a> |</li>
         <li><a href="index.html">demo v0.0 documentation</a> &raquo;</li> 
       </ul>
@@ -61,11 +61,11 @@ Homepage:</p>
       <div class="sphinxsidebar">
         <div class="sphinxsidebarwrapper">
             <h4>Previous topic</h4>
-            <p class="topless"><a href="django-project.html"
-                                  title="previous chapter">django-project</a></p>
+            <p class="topless"><a href="appenginebook.html"
+                                  title="previous chapter">appenginebook</a></p>
             <h4>Next topic</h4>
-            <p class="topless"><a href="django-djikiki.html"
-                                  title="next chapter">django-djikiki</a></p>
+            <p class="topless"><a href="OpenEcho.html"
+                                  title="next chapter">OpenEcho</a></p>
             <h3>This Page</h3>
             <ul class="this-page-menu">
               <li><a href="_sources/Acts-as-Django.txt"
@@ -95,10 +95,10 @@ Homepage:</p>
           <a href="genindex.html" title="General Index"
              >index</a></li>
         <li class="right" >
-          <a href="django-djikiki.html" title="django-djikiki"
+          <a href="OpenEcho.html" title="OpenEcho"
              >next</a> |</li>
         <li class="right" >
-          <a href="django-project.html" title="django-project"
+          <a href="appenginebook.html" title="appenginebook"
              >previous</a> |</li>
         <li><a href="index.html">demo v0.0 documentation</a> &raquo;</li> 
       </ul>
