--- a/Shiny-New-Django-1.1.html
+++ b/Shiny-New-Django-1.1.html
@@ -20,7 +20,7 @@
     <script type="text/javascript" src="_static/jquery.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
     <link rel="top" title="demo v0.0 documentation" href="index.html" />
-    <link rel="next" title="OpenEcho" href="OpenEcho.html" />
+    <link rel="next" title="pro-django-tools" href="pro-django-tools.html" />
     <link rel="prev" title="Django-Request-Response" href="Django-Request-Response.html" /> 
   </head>
   <body>
@@ -31,7 +31,7 @@
           <a href="genindex.html" title="General Index"
              accesskey="I">index</a></li>
         <li class="right" >
-          <a href="OpenEcho.html" title="OpenEcho"
+          <a href="pro-django-tools.html" title="pro-django-tools"
              accesskey="N">next</a> |</li>
         <li class="right" >
           <a href="Django-Request-Response.html" title="Django-Request-Response"
@@ -64,8 +64,8 @@ Homepage: shinynewdjango1dot1</p>
             <p class="topless"><a href="Django-Request-Response.html"
                                   title="previous chapter">Django-Request-Response</a></p>
             <h4>Next topic</h4>
-            <p class="topless"><a href="OpenEcho.html"
-                                  title="next chapter">OpenEcho</a></p>
+            <p class="topless"><a href="pro-django-tools.html"
+                                  title="next chapter">pro-django-tools</a></p>
             <h3>This Page</h3>
             <ul class="this-page-menu">
               <li><a href="_sources/Shiny-New-Django-1.1.txt"
@@ -95,7 +95,7 @@ Homepage: shinynewdjango1dot1</p>
           <a href="genindex.html" title="General Index"
              >index</a></li>
         <li class="right" >
-          <a href="OpenEcho.html" title="OpenEcho"
+          <a href="pro-django-tools.html" title="pro-django-tools"
              >next</a> |</li>
         <li class="right" >
           <a href="Django-Request-Response.html" title="Django-Request-Response"
