--- a/django-google-analytics.html
+++ b/django-google-analytics.html
@@ -21,7 +21,7 @@
     <script type="text/javascript" src="_static/doctools.js"></script>
     <link rel="top" title="demo v0.0 documentation" href="index.html" />
     <link rel="next" title="yahoo-hack-day-2010" href="yahoo-hack-day-2010.html" />
-    <link rel="prev" title="OpenEcho" href="OpenEcho.html" /> 
+    <link rel="prev" title="pro-django-tools" href="pro-django-tools.html" /> 
   </head>
   <body>
     <div class="related">
@@ -34,7 +34,7 @@
           <a href="yahoo-hack-day-2010.html" title="yahoo-hack-day-2010"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="OpenEcho.html" title="OpenEcho"
+          <a href="pro-django-tools.html" title="pro-django-tools"
              accesskey="P">previous</a> |</li>
         <li><a href="index.html">demo v0.0 documentation</a> &raquo;</li> 
       </ul>
@@ -61,8 +61,8 @@ Homepage:</p>
       <div class="sphinxsidebar">
         <div class="sphinxsidebarwrapper">
             <h4>Previous topic</h4>
-            <p class="topless"><a href="OpenEcho.html"
-                                  title="previous chapter">OpenEcho</a></p>
+            <p class="topless"><a href="pro-django-tools.html"
+                                  title="previous chapter">pro-django-tools</a></p>
             <h4>Next topic</h4>
             <p class="topless"><a href="yahoo-hack-day-2010.html"
                                   title="next chapter">yahoo-hack-day-2010</a></p>
@@ -98,7 +98,7 @@ Homepage:</p>
           <a href="yahoo-hack-day-2010.html" title="yahoo-hack-day-2010"
              >next</a> |</li>
         <li class="right" >
-          <a href="OpenEcho.html" title="OpenEcho"
+          <a href="pro-django-tools.html" title="pro-django-tools"
              >previous</a> |</li>
         <li><a href="index.html">demo v0.0 documentation</a> &raquo;</li> 
       </ul>
