--- a/django-queued-storage.html
+++ b/django-queued-storage.html
@@ -20,8 +20,8 @@
     <script type="text/javascript" src="_static/jquery.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
     <link rel="top" title="demo v0.0 documentation" href="index.html" />
-    <link rel="next" title="django-mailer" href="django-mailer.html" />
-    <link rel="prev" title="pro-django-tools" href="pro-django-tools.html" /> 
+    <link rel="next" title="uswaretech.github.com" href="uswaretech.github.com.html" />
+    <link rel="prev" title="pinax" href="pinax.html" /> 
   </head>
   <body>
     <div class="related">
@@ -31,10 +31,10 @@
           <a href="genindex.html" title="General Index"
              accesskey="I">index</a></li>
         <li class="right" >
-          <a href="django-mailer.html" title="django-mailer"
+          <a href="uswaretech.github.com.html" title="uswaretech.github.com"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="pro-django-tools.html" title="pro-django-tools"
+          <a href="pinax.html" title="pinax"
              accesskey="P">previous</a> |</li>
         <li><a href="index.html">demo v0.0 documentation</a> &raquo;</li> 
       </ul>
@@ -61,11 +61,11 @@ Homepage:</p>
       <div class="sphinxsidebar">
         <div class="sphinxsidebarwrapper">
             <h4>Previous topic</h4>
-            <p class="topless"><a href="pro-django-tools.html"
-                                  title="previous chapter">pro-django-tools</a></p>
+            <p class="topless"><a href="pinax.html"
+                                  title="previous chapter">pinax</a></p>
             <h4>Next topic</h4>
-            <p class="topless"><a href="django-mailer.html"
-                                  title="next chapter">django-mailer</a></p>
+            <p class="topless"><a href="uswaretech.github.com.html"
+                                  title="next chapter">uswaretech.github.com</a></p>
             <h3>This Page</h3>
             <ul class="this-page-menu">
               <li><a href="_sources/django-queued-storage.txt"
@@ -95,10 +95,10 @@ Homepage:</p>
           <a href="genindex.html" title="General Index"
              >index</a></li>
         <li class="right" >
-          <a href="django-mailer.html" title="django-mailer"
+          <a href="uswaretech.github.com.html" title="uswaretech.github.com"
              >next</a> |</li>
         <li class="right" >
-          <a href="pro-django-tools.html" title="pro-django-tools"
+          <a href="pinax.html" title="pinax"
              >previous</a> |</li>
         <li><a href="index.html">demo v0.0 documentation</a> &raquo;</li> 
       </ul>
