--- a/uswaretech.github.com.html
+++ b/uswaretech.github.com.html
@@ -21,7 +21,7 @@
     <script type="text/javascript" src="_static/doctools.js"></script>
     <link rel="top" title="demo v0.0 documentation" href="index.html" />
     <link rel="next" title="docs" href="docs.html" />
-    <link rel="prev" title="django-mailer" href="django-mailer.html" /> 
+    <link rel="prev" title="django-queued-storage" href="django-queued-storage.html" /> 
   </head>
   <body>
     <div class="related">
@@ -34,7 +34,7 @@
           <a href="docs.html" title="docs"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="django-mailer.html" title="django-mailer"
+          <a href="django-queued-storage.html" title="django-queued-storage"
              accesskey="P">previous</a> |</li>
         <li><a href="index.html">demo v0.0 documentation</a> &raquo;</li> 
       </ul>
@@ -61,8 +61,8 @@ Homepage:</p>
       <div class="sphinxsidebar">
         <div class="sphinxsidebarwrapper">
             <h4>Previous topic</h4>
-            <p class="topless"><a href="django-mailer.html"
-                                  title="previous chapter">django-mailer</a></p>
+            <p class="topless"><a href="django-queued-storage.html"
+                                  title="previous chapter">django-queued-storage</a></p>
             <h4>Next topic</h4>
             <p class="topless"><a href="docs.html"
                                   title="next chapter">docs</a></p>
@@ -98,7 +98,7 @@ Homepage:</p>
           <a href="docs.html" title="docs"
              >next</a> |</li>
         <li class="right" >
-          <a href="django-mailer.html" title="django-mailer"
+          <a href="django-queued-storage.html" title="django-queued-storage"
              >previous</a> |</li>
         <li><a href="index.html">demo v0.0 documentation</a> &raquo;</li> 
       </ul>
